@@ -16,8 +16,9 @@
 - Windows console:
 	- DCI history data viewer improved
 	- Graphs improved
+- Implemented parameter UPS.Load for BCM/XCP compatible devices
 - Fixed issues: #4, #20, #47, #67, #79, #80, #91, #92, #93, #94, #95, #96, #97,
-                #98, #99, #100
+                #98, #99, #100, #103
 
 
 *
